# Youtube-Media-Downloader

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
doc_original_translations/: ar_SA.ts  de_DE.ts  en_US.ts  es_ES.ts  fr_FR.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  pt_PT.ts  ru_RU.ts  uk_UA.ts  zh_CN.ts  zh_TW.ts
include/constants/: Core_Constants.hpp  Db_Constants.hpp  Download_Constants.hpp  Ui_Constants.hpp  Update_Constants.hpp
include/container/: Download.hpp  ToolsPath.hpp
include/core/: BasicTools.hpp  CryptoManager.hpp  IdIndexMap.hpp  SharedStorage.hpp
include/db/: DataBase.hpp  DbClient.hpp  DbManager.hpp  DbServer.hpp  Operation.hpp  Request.hpp  Specification.hpp
include/download/: DownloadManager.hpp  DownloadWorker.hpp
include/ui/: DownloadCard.hpp  DownloadConfig.hpp  GlassWidget.hpp  MainWindow.hpp  NoticeView.hpp  SettingsView.hpp  ShowItags.hpp
include/update/: UpdateChecker.hpp
resources/: MediaDownloader.rc
resources/icons/: AppIcon.icns
src/container/: Download.cpp  ToolsPath.cpp
src/core/: CryptoManager.cpp  IdIndexMap.cpp  SharedStorage.cpp
src/db/: DataBase.cpp  DbClient.cpp  DbManager.cpp  DbServer.cpp
src/download/: DownloadManager.cpp  DownloadWorker.cpp
src/ui/: DownloadCard.cpp  DownloadConfig.cpp  GlassWidget.cpp  MainWindow.cpp  NoticeView.cpp  SettingsView.cpp  ShowItags.cpp
src/update/: UpdateChecker.cpp
translations/: ar_SA.qm  de_DE.qm  en_US.qm  es_ES.qm  fr_FR.qm  it_IT.qm  ja_JP.qm  ko_KR.qm  pt_PT.qm  ru_RU.qm  uk_UA.qm  zh_CN.qm  zh_TW.qm
